--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "concurrently": "^6.2.0",
-    "elm-json": "^0.2.10"
+    "elm-json": "^0.2.10",
+    "elm-live": "^4.0.2"
   }
 }
