--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,27 +1,33 @@
 {
 
-  "manifest_version": 3,
-  "name": "Linkhut Companion",
-  "description": "Save bookmarks to linkhut",
-  "version": "0.3.3",
-  "homepage_url": "https://github.com/pyrho/linkhut-webextension",
-  "icons": {
-    "48": "icons/icon.svg"
-  },
-  "permissions": [
-    "activeTab",
-    "identity",
-    "storage"
-  ],
-  "host_permissions": [
-    "*://api.ln.ht/*"
-  ],
-  "action": {
-    "default_icon": "icons/icon.svg",
-    "default_title": "Linkhut",
-    "default_popup": "popup/popup.html"
-  },
-  "options_ui": {
-    "page": "options/options.html"
-  }
+    "manifest_version": 3,
+    "name": "Linkhut Companion",
+    "description": "Save bookmarks to linkhut",
+    "version": "0.3.3",
+    "homepage_url": "https://github.com/pyrho/linkhut-webextension",
+    "icons": {
+        "48": "icons/icon.svg"
+    },
+    "permissions": [
+        "activeTab",
+        "identity",
+        "storage"
+    ],
+    "host_permissions": [
+        "*://api.ln.ht/*"
+    ],
+    "action": {
+        "default_icon": "icons/icon.svg",
+        "default_title": "Linkhut",
+        "default_popup": "popup/popup.html"
+    },
+    "options_ui": {
+        "page": "options/options.html"
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "linkhut-companion@ln.ht",
+            "strict_min_version": "101.0"
+        }
+    }
 }
